# portest

./: .env.example  .gitignore  .pre-commit-config.yaml  CONSTITUTION.md  Dockerfile  Draft Pro-Test Demo Day Presentation.pptx  Makefile  PROGRESS.md  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  setup.py  setup.sh
.github/workflows/: cd.yml  ci.yml
api/: Test.ipynb  api.py  final_RF_model:Zone.Identifier  model_logistic_regression_Injuries_inflicted  model_logistic_regression_No_known_coercion_no_security_presence  model_logistic_regression_Security_forces_present_at_event  pipeline  pipeline:Zone.Identifier  prediction.py  the_features.csv:Zone.Identifier
api/archived/: Test.ipynb  model_logistic_regression_Army_present_at_event  model_logistic_regression_Arrests__detentions  model_logistic_regression_Deaths_inflicted  model_logistic_regression_Party_Militias_Baltagia_present_at_event  model_logistic_regression_Physical_harassment  the_features.csv
data/: DATA_DOCUMENTATION.md
deploy/: docker-compose.production.yml  docker-compose.staging.yml
deploy/nginx/: production.conf  staging.conf
docs/: MODEL_LIMITATIONS.md
frontend/: .env.example  Dockerfile  frontend.py  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/model/: page.tsx
frontend/src/components/: bottom-panel.tsx  feature-importance.tsx  filter-toolbar.tsx  map-filter-bar.tsx  map-legend.tsx  methods-chart.tsx  model-info.tsx  prediction-form-compact.tsx  prediction-form.tsx  prediction-panel.tsx  prediction-results.tsx  protest-map-inner.tsx  protest-map.tsx  repression-overview.tsx  sidebar-form.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx
frontend/src/lib/: api.ts  constants.ts  types.ts
frontend/src/types/: leaflet.heat.d.ts
monitoring/: docker-compose.yml
monitoring/grafana/dashboards/: dashboard.yml  protest-api.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/alerts/: protest-alerts.yml
notebooks/: 1_drop_non_impact_params.ipynb  3_initial_modelling_logistic_lebanon.ipynb  4_initial_modelling_ensemble_methods.ipynb  4_initial_modelling_ensemble_methods_violent.ipynb  4_initial_modelling_svm.ipynb  5_further_model_investigation.ipynb  egypt_data_prep.ipynb  egypt_plotting.ipynb  features.ipynb  final_data_cleaning.ipynb  iraq_exploration.ipynb  leb_plotting.ipynb  model_evaluation.ipynb  random_forest_egypt.ipynb  testing_DT_model_with_other_features .ipynb
pro-test/: data.py  model.py  preproc.py
pro-test/data/: Leb_1_drop_non_impact_params.csv  egypt_cleand.csv  full_df.csv  iraq_1_drop_non_impact_params.csv  iraq_cleand.csv  leb_cleand.csv
protest/: config.py  data.py  logging.py  metrics.py  preproc.py
protest/data/: Iraq-gp.csv  Leb-gp.csv  egypt_1_drop_non_impact_params.csv
protest/models/: __init__.py  base.py  ensemble.py  evaluation.py  registry.py  trainers.py
scripts/: train_models.py
tests/: conftest.py  test_api.py  test_config.py  test_data.py  test_integration.py  test_logging.py  test_metrics.py  test_models.py
