[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pro-test"
version = "2.0.0"
description = "Predictive Modelling for Protest Outcome Analysis"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
authors = [
    { name = "Noah Darwich" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Data Science
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.1.0,<3.0.0",
    "scikit-learn>=1.7.0,<1.8.0",
    "joblib>=1.3.0,<2.0.0",

    # ML Models (for ensemble)
    "xgboost>=2.0.0,<3.0.0",
    "lightgbm>=4.2.0,<5.0.0",

    # API
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",

    # Frontend
    "streamlit>=1.30.0,<2.0.0",
    "plotly>=5.18.0,<6.0.0",

    # Caching (optional for now)
    "redis>=5.0.0,<6.0.0",

    # HTTP client for frontend
    "httpx>=0.26.0,<1.0.0",

    # Logging & Rate Limiting
    "structlog>=24.1.0,<25.0.0",
    "slowapi>=0.1.9,<1.0.0",

    # Monitoring
    "prometheus-fastapi-instrumentator>=6.1.0,<7.0.0",
    "prometheus-client>=0.19.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "httpx>=0.26.0,<1.0.0",

    # Linting & Formatting
    "ruff>=0.1.14,<1.0.0",
    "mypy>=1.8.0,<2.0.0",

    # Pre-commit
    "pre-commit>=3.6.0,<4.0.0",

    # Type stubs
    "pandas-stubs>=2.1.0",
    "types-redis>=4.6.0",
]

mlops = [
    # MLOps tools (Phase 2+)
    "mlflow>=2.10.0,<3.0.0",
    "dvc>=3.38.0,<4.0.0",
    "evidently>=0.4.0,<1.0.0",
    "shap>=0.44.0,<1.0.0",
]

[project.scripts]
pro-test-api = "api.api:main"

[project.urls]
Repository = "https://github.com/NoahDarwich/pro-test"

# ============================================================
# Tool Configurations
# ============================================================

[tool.hatch.build.targets.wheel]
packages = ["protest", "api"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["notebooks/*", "api/archived/*"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["protest", "api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["protest", "api"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "protest/data.py",      # Legacy data loading module
    "protest/preproc.py",   # Legacy preprocessing module
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 50

[tool.bandit]
exclude_dirs = ["tests", "notebooks"]
skips = ["B101"]  # Skip assert warnings in non-test code
